k8s/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: dart-messages
    role: frontend
  ports:
    - port: 80
      targetPort: 8080
